<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisro00005513.tarealabo4.MenuPlanetas">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mercurio"
                android:layout_gravity="center"
                android:id="@+id/mercurio"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/mercurio"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/venus"
                android:layout_gravity="center"
                android:id="@+id/venus"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/venus"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tierra"
                android:layout_gravity="center"
                android:id="@+id/tierra"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/tierra"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/marte"
                android:layout_gravity="center"
                android:id="@+id/marte"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/marte"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/jupiter"
                android:layout_gravity="center"
                android:id="@+id/jupiter"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/jupiter"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/saturno"
                android:layout_gravity="center"
                android:id="@+id/saturno"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/saturno"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/urano"
                android:layout_gravity="center"
                android:id="@+id/urano"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/urano"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/neptuno"
                android:layout_gravity="center"
                android:id="@+id/neptuno"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/neptuno"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="4dp"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pluton"
                android:layout_gravity="center"
                android:id="@+id/pluton"
                >
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:text="@string/pluton"
                    />
            </LinearLayout>



        </TableLayout>



    </ScrollView>

</FrameLayout>
